# Sporttest_App

./: PÜ3_1_LoadingData.ipynb  PÜ3_2_Pandas.ipynb  README.md  assign_ftp_files.py  ekgdata.py  fit_reader.py  get_person.py  hf_zonen.py  main.py  power_curve.py  pyproject.toml  read_ekgdata.py  read_fitfile.py  read_pandas.py  read_persondata.py  requirements.txt
data/: person_db.json
data/Stufentest_data/: 11129269515_ACTIVITY.fit  FTP_File_1.fit
