[project]
name = "aufgabe_3-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabse213", email = "sg2697@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1", "jupyter>=1.1.1", "plotly>=6.1.2", "numpy>=2.2.6", "pandas>=2.2.3", "matplotlib>=3.10.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
