[project]
name = "Sporttest_App"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabse213", email = "sg2697@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
